media query applied

--- a/index.html
+++ b/index.html
@@ -5,45 +5,83 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Roll Dice</title>
     <style>
-        body{
-    background-color:#ccdcff;
-    margin: 0;
-    padding: 0;
-}
-.container{
-    border: 1px solid black;
-    width: 350px;
-    margin: 0 auto;
-    border-radius: 5px;
-    padding: 10px;
-    box-shadow: 0 0 10px rgba(0,0,0,0.5);
-    margin-top: 50px;
-    background-color: #fff;
-}
-.heading{
-    text-align: center;
-    color: #ff4d4d;
-}
-.dice{
-    height: 200px;
-    display: block;
-    margin: 50px auto;
-}
-.btn-roll{
-    display: block;
-    margin: 20px auto;
-    font-size: 40px;
-    padding: 5px 30px;
-    border-radius: 30px;
-    border: none;
-    background-color: #ffccff;
-    color: #b300b3;
-    cursor: pointer;
-}
-.btn-roll:hover{
-    background-color:#ffb3ff;
-    border: 4px;
-}
+        body {
+            background-color: #ccdcff;
+            margin: 0;
+            padding: 0;
+        }
+
+        .container {
+            border: 1px solid black;
+            width: 350px;
+            margin: 0 auto;
+            border-radius: 5px;
+            padding: 10px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
+            margin-top: 50px;
+            background-color: #fff;
+        }
+
+        .heading {
+            text-align: center;
+            color: #ff4d4d;
+        }
+
+        .dice {
+            height: 200px;
+            display: block;
+            margin: 50px auto;
+        }
+
+        .btn-roll {
+            display: block;
+            margin: 20px auto;
+            font-size: 40px;
+            padding: 5px 30px;
+            border-radius: 30px;
+            border: none;
+            background-color: #ffccff;
+            color: #b300b3;
+            cursor: pointer;
+        }
+
+        .btn-roll:hover {
+            background-color: #ffb3ff;
+            border: 4px;
+        }
+
+        /* Media Query for smaller screens */
+        @media (max-width: 600px) {
+            .container {
+                width: 90%;
+                margin-top: 20px;
+            }
+
+            .dice {
+                height: 150px;
+            }
+
+            .btn-roll {
+                font-size: 30px;
+                padding: 5px 20px;
+            }
+        }
+
+        /* Media Query for extra small screens (e.g., phones in portrait mode) */
+        @media (max-width: 400px) {
+            .heading {
+                font-size: 18px;
+            }
+
+            .dice {
+                height: 120px;
+            }
+
+            .btn-roll {
+                font-size: 25px;
+                padding: 5px 15px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -52,31 +90,27 @@
         <img src="dice.jpg" class="dice" id="dice-img"/>
         <button class="btn-roll" onclick="rollDice()">Roll</button>
     </div>
-    <script>
-         function rollDice() {
-            const min=1;
-            const max=6;
 
-            const random=Math.floor(Math.random() * (max-min+1))+min;
+    <script>
+        function rollDice() {
+            const min = 1;
+            const max = 6;
+
+            const random = Math.floor(Math.random() * (max - min + 1)) + min;
 
             const diceImg = document.getElementById('dice-img');
-            
-            if(random==1){
+
+            if (random == 1) {
                 diceImg.src = 'dice_1.jpg';
-            }
-            else if(random==2){
+            } else if (random == 2) {
                 diceImg.src = 'dice_2.jpg';
-            }
-            else if(random==3){
+            } else if (random == 3) {
                 diceImg.src = 'dice_3.jpg';
-            }
-            else if(random==4){
+            } else if (random == 4) {
                 diceImg.src = 'dice_4.jpg';
-            }
-            else if(random==5){
+            } else if (random == 5) {
                 diceImg.src = 'dice_5.jpg';
-            }
-            else if(random==6){
+            } else if (random == 6) {
                 diceImg.src = 'dice_6.jpg';
             }
         }
